src/test/deca/context/valid/methodCall.deca
class A {
    int x;
    void maMethod(float y){}

}


{
float f = 0.3;
A a = new A();
a.maMethod(f);
}
