src/test/deca/context/invalid/redefine.deca
{
        float f = 0.3 ;
        int f = 3;
        }
